# RoboRTS-Base

./: .gitignore  LICENSE  README.md
docker/: Dockerfile  build_image.sh  config_and_make.sh  launch.sh  sources.list
docs/: docker.md  node_api.md
roborts_base/: CMakeLists.txt  package.xml
roborts_base/config/: base.yaml
roborts_base/include/: chassis.h  config.h  gimbal.h  module.h  referee_system.h  ros_dep.h
roborts_base/include/utils/: bind_this.h  factory.h
roborts_base/launch/: base.launch
roborts_base/roborts_sdk/: CMakeLists.txt
roborts_base/roborts_sdk/include/: protocol_content.h  roborts_sdk.h
roborts_base/roborts_sdk/include/dispatch/: dispatch.h  execution.h  handle.h
roborts_base/roborts_sdk/include/hardware/: serial_device.h
roborts_base/roborts_sdk/include/protocol/: protocol.h
roborts_base/roborts_sdk/include/utilities/: log.h  memory_pool.h
roborts_base/roborts_sdk/sample/: sample.cpp
roborts_base/roborts_sdk/src/: execution.cpp  handle.cpp  protocol.cpp  serial_device.cpp
roborts_base/src/: chassis.cpp  gimbal.cpp  referee_system.cpp  roborts_base_node.cpp
roborts_msgs/: CMakeLists.txt
roborts_msgs/msg/referee_system/: GameRobotBullet.msg  GameRobotHP.msg  GameStatus.msg  GameZoneArray.msg  LurkStatus.msg  RobotDamage.msg  RobotStatus.msg
scripts/: catkin_make.sh  launch.sh  udev.sh
