<package format = "2">
    <name>roborts_base</name>
    <version>2.0.0</version>
    <description>
        The roborts_base package provides ROS driver for RoboMaster AI Robot
    </description>
    <author>RoboMaster</author>
    <maintainer email="robomaster@dji.com">RoboMaster</maintainer>
    <license>GPL 3.0</license>
    <url type="repository">https://github.com/RoboMaster/RoboRTS-Base</url>
    <url type="bugtracker">https://github.com/RoboMaster/RoboRTS-Base/issues</url>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>tf</depend>
    <depend>roborts_msgs</depend>

    <depend>libgoogle-glog-dev</depend>
</package>
